feat: moving to own theme and adding docker init stuff

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,9 @@
 {
-  "image": "hugomods/hugo:exts"
+  "image": "hugomods/hugo:exts",
+
+  "postCreateCommand": "hugo mod get -u && hugo mod tidy && hugo mod npm pack && npm install",
+
+  "postStartCommand": "hugo server -w",
+
+  "forwardPorts": [1313]
 }
