--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,7 +5,7 @@ title: jpool.dev
 
 module:
   imports:
-  - path: github.com/hugo-toha/toha/v4
+  - path: github.com/jamespoulin007/cv-hugo-theme
   mounts:
   - source: ./node_modules/flag-icon-css/flags
     target: static/flags
