--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+### Hugo ###
 resources/*
 node_modules/*
 public/*
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
+
+# Mac Specific
+.DS_Store
