--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../../../root/.cache/hugo_cache/modules/filecache/modules/pkg/mod/github.com/hugo-toha/toha/v4@v4.7.0/assets/*"
+    "../../../root/.cache/hugo_cache/modules/filecache/modules/pkg/mod/github.com/jamespoulin007/cv-hugo-theme@v1.1.0/assets/*"
    ]
   }
  }
