--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,20 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "James Poulin"
+nickname: "James"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
-# image: "images/author/john.png"
+greeting: "Hi, I'm"
+image: "images/JamesProfilePic.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
+  github: jamespoulin007
+  linkedin: jpooldev
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am a Lead Cloud Platform Engineer
+  - I love working with IaC
+  - I love managing and developing teams
+  - I love to work with cloud technology
+  - I love to work with k8s
