--- a/package.json
+++ b/package.json
@@ -2,63 +2,63 @@
   "comments": {
     "dependencies": {},
     "devDependencies": {
-      "@fontsource/mulish": "github.com/hugo-toha/toha/v4",
-      "@fortawesome/fontawesome-free": "github.com/hugo-toha/toha/v4",
-      "autoprefixer": "github.com/hugo-toha/toha/v4",
-      "bootstrap": "github.com/hugo-toha/toha/v4",
-      "eslint": "github.com/hugo-toha/toha/v4",
-      "eslint-config-prettier": "github.com/hugo-toha/toha/v4",
-      "eslint-config-standard": "github.com/hugo-toha/toha/v4",
-      "eslint-plugin-import": "github.com/hugo-toha/toha/v4",
-      "eslint-plugin-n": "github.com/hugo-toha/toha/v4",
-      "eslint-plugin-no-jquery": "github.com/hugo-toha/toha/v4",
-      "eslint-plugin-promise": "github.com/hugo-toha/toha/v4",
-      "feather-icons": "github.com/hugo-toha/toha/v4",
-      "filterizr": "github.com/hugo-toha/toha/v4",
-      "flag-icons": "github.com/hugo-toha/toha/v4",
-      "fuse.js": "github.com/hugo-toha/toha/v4",
-      "highlight.js": "github.com/hugo-toha/toha/v4",
-      "imagesloaded": "github.com/hugo-toha/toha/v4",
-      "include-media": "github.com/hugo-toha/toha/v4",
-      "ityped": "github.com/hugo-toha/toha/v4",
-      "katex": "github.com/hugo-toha/toha/v4",
-      "mark.js": "github.com/hugo-toha/toha/v4",
-      "mermaid": "github.com/hugo-toha/toha/v4",
-      "plyr": "github.com/hugo-toha/toha/v4",
-      "popper.js": "github.com/hugo-toha/toha/v4",
-      "postcss": "github.com/hugo-toha/toha/v4",
-      "postcss-cli": "github.com/hugo-toha/toha/v4"
+      "@fontsource/mulish": "github.com/jamespoulin007/cv-hugo-theme",
+      "@fortawesome/fontawesome-free": "github.com/jamespoulin007/cv-hugo-theme",
+      "autoprefixer": "github.com/jamespoulin007/cv-hugo-theme",
+      "bootstrap": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-config-prettier": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-config-standard": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-plugin-import": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-plugin-n": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-plugin-no-jquery": "github.com/jamespoulin007/cv-hugo-theme",
+      "eslint-plugin-promise": "github.com/jamespoulin007/cv-hugo-theme",
+      "feather-icons": "github.com/jamespoulin007/cv-hugo-theme",
+      "filterizr": "github.com/jamespoulin007/cv-hugo-theme",
+      "flag-icons": "github.com/jamespoulin007/cv-hugo-theme",
+      "fuse.js": "github.com/jamespoulin007/cv-hugo-theme",
+      "highlight.js": "github.com/jamespoulin007/cv-hugo-theme",
+      "imagesloaded": "github.com/jamespoulin007/cv-hugo-theme",
+      "include-media": "github.com/jamespoulin007/cv-hugo-theme",
+      "ityped": "github.com/jamespoulin007/cv-hugo-theme",
+      "katex": "github.com/jamespoulin007/cv-hugo-theme",
+      "mark.js": "github.com/jamespoulin007/cv-hugo-theme",
+      "mermaid": "github.com/jamespoulin007/cv-hugo-theme",
+      "plyr": "github.com/jamespoulin007/cv-hugo-theme",
+      "popper.js": "github.com/jamespoulin007/cv-hugo-theme",
+      "postcss": "github.com/jamespoulin007/cv-hugo-theme",
+      "postcss-cli": "github.com/jamespoulin007/cv-hugo-theme"
     }
   },
   "dependencies": {},
   "devDependencies": {
     "@fontsource/mulish": "4.5.13",
-    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-no-jquery": "^2.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "feather-icons": "^4.29.1",
+    "eslint-plugin-promise": "^6.6.0",
+    "feather-icons": "^4.29.2",
     "filterizr": "^2.2.4",
     "flag-icons": "^7.2.3",
     "fuse.js": "^6.6.2",
-    "highlight.js": "^11.6.0",
+    "highlight.js": "^11.11.1",
     "imagesloaded": "^5.0.0",
     "include-media": "^1.4.10",
     "ityped": "^1.0.3",
-    "katex": "^0.16.11",
+    "katex": "^0.16.19",
     "mark.js": "^8.11.1",
-    "mermaid": "^9.2.1",
-    "plyr": "^3.7.2",
+    "mermaid": "^9.4.3",
+    "plyr": "^3.7.8",
     "popper.js": "^1.16.1",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0"
   },
   "name": "jpool.dev",
-  "version": "0.1.0"
+  "version": "1.1.0"
 }
