--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -3,7 +3,7 @@ name: "James Poulin"
 nickname: "James"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I'm"
-image: "images/JamesProfilePic.jpg"
+# image: "images/JamesProfilePic.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   github: jamespoulin007
