--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,7 +16,7 @@ module:
 
 
 params:
-  background: "images/PXL_20230730_233946230.jpg"
+  background: "images/main_background.jpg"
   footer:
     enable: true
     newsletter:
