fix: copy pasta overview

--- a/data/en/sections/experience.yaml
+++ b/data/en/sections/experience.yaml
@@ -81,7 +81,7 @@ experience:
     # logo: /images/experiences/company.png
     # darkLogo: /images/experiences/company-dark.png #(optional), Can optionally show a different logo for dark theme
     # company overview
-    overview: Alessa builds AML compliance and fraud prevention SaaS solutions.
+    overview: Mitel builds unified communications hardware and software solutions.
   positions:
   - designation: Lead Software QA Developer
     start: May 2016
